# Membrane

./: .clang-format  .clang-tidy  .gitignore  ATTRIBUTION.md  CMakeLists.txt  Gen.js  Gen.sh  LICENSE  Makefile  package.json  readme.md  readme_zh.md
.github/workflows/: github-mirror.yml
Web/: membrane-api.ts  membrane.d.ts  membrane.js
include/: BootstrapHtml.hpp  Membrane.hpp
lib/FunctionRegistry/: FunctionRegistry.cpp  FunctionRegistry.hpp
lib/FunctionRegistry/tests/: FunctionRegistryTest.cpp
lib/HttpServer/: HttpServer.cpp  HttpServer.hpp
lib/HttpServer/tests/: httpserverTest.cpp
lib/Json/: json.hpp
lib/Membrane_lib/: Membrane.cpp  Membrane.hpp  Membrane.setup.cpp  MembraneUtils.cpp  MembraneUtils.hpp
lib/Membrane_lib/tests/: Membrane_libTest.cpp
lib/vfs/: vfs.cpp  vfs.hpp
lib/vfs/tests/: vfsTest.cpp
res/: about.hpp  about.html  aggregate.hpp  index.hpp  index.html
res/headers/: about.hpp  index.hpp
scripts/: CMakeLists.txt  build-cpp.js  build-ui.js  clean.js  deps.js
scripts/package/: build-appimage.js  build-deb.js  create-icon.js
src/: Membrane.cpp  main.cpp
src-react/: .gitignore  Gen.cjs  Gen.ps1  Gen.sh  package-lock.json  package.json
src-react/public/map/: background.csv  foreground.csv  main.csv
src-react/src/: App.jsx  App.tsx  Demo.jsx  Membrane.js  frontend.tsx  index.css  index.html  main.ts
src-react/src/Demos/: Demo.jsx  Demo.tsx  FileSystemDemo.tsx
src-react/src/app/: initialize.ts  viewport.ts
src-react/src/assets/: loader.ts
src-react/src/map/: background.ts  generator.ts  parser.ts
src-react/src/map/csv/: foreground.ts  main.ts
src-react/src/sprites/: character.ts  spritesheet.ts
src-react/src/ui/: controls.ts  debug.ts
src/GameState/: GameState.hpp
